--- a/package.json
+++ b/package.json
@@ -13,34 +13,36 @@
   "author": "Conor Byron",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.7.5",
-    "@babel/plugin-proposal-class-properties": "^7.7.4",
-    "@babel/plugin-proposal-object-rest-spread": "^7.7.4",
-    "@babel/preset-env": "^7.7.6",
-    "@babel/preset-react": "^7.7.4",
-    "@babel/preset-typescript": "^7.7.4",
-    "@types/react": "^16.9.16",
+    "@babel/core": "^7.8.3",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
+    "@babel/preset-react": "^7.8.3",
+    "@babel/preset-typescript": "^7.8.3",
+    "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
-    "@types/react-redux": "^7.1.5",
+    "@types/react-redux": "^7.1.6",
+    "@types/tone": "git://github.com/Tonejs/TypeScript.git",
     "@wasm-tool/wasm-pack-plugin": "^1.1.0",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.1.1",
-    "css-loader": "^3.3.2",
+    "css-loader": "^3.4.2",
     "html-webpack-plugin": "^3.2.0",
     "raw-loader": "^4.0.0",
     "redux-devtools": "^3.5.0",
     "rimraf": "^3.0.0",
-    "style-loader": "^1.0.1",
-    "webpack": "^4.41.2",
+    "style-loader": "^1.1.3",
+    "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.9.0"
+    "webpack-dev-server": "^3.10.1"
   },
   "dependencies": {
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
-    "redux": "^4.0.4",
-    "three": "^0.112.1"
+    "redux": "^4.0.5",
+    "three": "^0.112.1",
+    "tone": "^13.8.25"
   }
 }
